Some tools and test data

--- a/TestHost.Core.UnitTests/TestHost.Core.UnitTests.fsproj
+++ b/TestHost.Core.UnitTests/TestHost.Core.UnitTests.fsproj
@@ -67,6 +67,7 @@
     <Content Include="packages.config" />
     <Content Include="app.config" />
     <Compile Include="TestRuntime\DependencyTests.fs" />
+    <EmbeddedResource Include="Resources\Resources.resx" />
     <None Include="..\TestExecution\TestData\bins\XUnit20FSPortable\FSharp.Core.dll">
       <Link>TestData\bins\XUnit20FSPortable\FSharp.Core.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -127,6 +128,10 @@
     <Compile Include="XUnitTestDiscovererTests.fs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="FSharp.Configuration">
+      <HintPath>..\packages\FSharp.Configuration.0.5.1\lib\net40\FSharp.Configuration.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Diagnostics.Tracing.EventSource">
       <HintPath>..\packages\Microsoft.Diagnostics.Tracing.EventSource.Redist.1.0.26\lib\net40\Microsoft.Diagnostics.Tracing.EventSource.dll</HintPath>
       <Private>True</Private>
@@ -154,6 +159,10 @@
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
     </Reference>
+    <Reference Include="SharpYaml">
+      <HintPath>..\packages\FSharp.Configuration.0.5.1\lib\net40\SharpYaml.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
@@ -172,6 +181,8 @@
       <Project>{84693096-cba0-407a-900a-3b48d21c5459}</Project>
       <Private>True</Private>
     </ProjectReference>
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Xml" />
     <Reference Include="xunit.abstractions">
       <HintPath>..\packages\xunit.abstractions.2.0.0\lib\net35\xunit.abstractions.dll</HintPath>
       <Private>True</Private>
