[a] Enhanced the console
[b] Introduced DataStore
[c] Partial changes w.r.t. margin/tagging/etc.

--- a/Common/Domain/Domain.fsproj
+++ b/Common/Domain/Domain.fsproj
@@ -66,6 +66,7 @@
     <Compile Include="PerDocumentSequencePoints.fs" />
     <Compile Include="PerTestIdResults.fs" />
     <Compile Include="RunDomain.fs" />
+    <Compile Include="IDataStore.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Diagnostics.Tracing.EventSource">
