--- a/Hosts/VS/TddStudioPackage/TddStudioPackage.csproj
+++ b/Hosts/VS/TddStudioPackage/TddStudioPackage.csproj
@@ -198,10 +198,11 @@
     <Compile Include="..\..\..\Common\Constants.cs">
       <Link>Constants.cs</Link>
     </Compile>
+    <Compile Include="EditorExtensions\CodeCoverageTag.cs" />
+    <Compile Include="EditorExtensions\TestMarkerTaggerProvider.cs" />
     <Compile Include="EditorExtensions\GlyphFactory.cs" />
     <Compile Include="EditorExtensions\GlyphFactoryProvider.cs" />
     <Compile Include="EditorExtensions\CodeCoverageState.cs" />
-    <Compile Include="EditorExtensions\CodeCoverageTag.cs" />
     <Compile Include="EditorExtensions\CodeCoverageTagger.cs" />
     <Compile Include="EditorExtensions\CodeCoverageTaggerProvider.cs" />
     <Compile Include="EditorExtensions\MarginFactory.cs" />
