--- a/Engine.Core/Engine.Core.fsproj
+++ b/Engine.Core/Engine.Core.fsproj
@@ -72,6 +72,7 @@
     <Compile Include="RunExecutor.fs" />
     <Compile Include="RunStateTracker.fs" />
     <Compile Include="TddStud10Runner.fs" />
+    <Compile Include="DataStore.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Diagnostics.Tracing.EventSource">
@@ -86,6 +87,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Xml" />
