Move around code to the rightful places
Marking loggers internal to remove conflict

--- a/Engine.Core/Engine.Core.fsproj
+++ b/Engine.Core/Engine.Core.fsproj
@@ -64,6 +64,7 @@
     <Compile Include="..\Common\Constants.fs">
       <Link>Constants.fs</Link>
     </Compile>
+    <Compile Include="AssemblyAttributes.fs" />
     <Compile Include="Logger.fs" />
     <Compile Include="SafeExec.fs" />
     <Compile Include="StaleMessageIgnoringAgent.fs" />
