some more refactoring

--- a/Hosts/VS/TddStudioPackage.Extensions/TddStudioPackage.Extensions.fsproj
+++ b/Hosts/VS/TddStudioPackage.Extensions/TddStudioPackage.Extensions.fsproj
@@ -66,7 +66,8 @@
     <Compile Include="Editor\TestMarkerTag.fs" />
     <Compile Include="Editor\TestMarkerTagger.fs" />
     <Compile Include="Editor\MarginConstants.fs" />
-    <Compile Include="Editor\GlyphFactory.fs" />
+    <Compile Include="Editor\MarginGlyphFactory.fs" />
+    <Compile Include="Editor\MarginGlyphPainter.fs" />
     <Compile Include="Editor\MarginCanvas.fs" />
     <Compile Include="Editor\Margin.fs" />
   </ItemGroup>
