--- a/Hosts/Common/CommonUI/CommonUI.csproj
+++ b/Hosts/Common/CommonUI/CommonUI.csproj
@@ -91,8 +91,11 @@
     <Compile Include="StatusBarNotificationIcon.xaml.cs">
       <DependentUpon>StatusBarNotificationIcon.xaml</DependentUpon>
     </Compile>
+    <Compile Include="TestCode\StubMappingSpan.cs" />
+    <Compile Include="TestCode\StubMappingTagSpan.cs" />
     <Compile Include="TestCode\StubTagAggregator.cs" />
-    <Compile Include="TestCode\StubWpfTextViewLineCollection.cs" />
+    <Compile Include="TestCode\StubTextSnapshot.cs" />
+    <Compile Include="TestCode\StubWpfTextViewLine.cs" />
     <Compile Include="TestCode\StubWpfTextView.cs" />
   </ItemGroup>
   <ItemGroup>
