--- a/Hosts/Common/CommonUI/CommonUI.csproj
+++ b/Hosts/Common/CommonUI/CommonUI.csproj
@@ -91,15 +91,15 @@
     <Compile Include="StatusBarNotificationIcon.xaml.cs">
       <DependentUpon>StatusBarNotificationIcon.xaml</DependentUpon>
     </Compile>
-    <Compile Include="TestCode\StubMappingSpan.cs" />
-    <Compile Include="TestCode\StubMappingTagSpan.cs" />
-    <Compile Include="TestCode\StubTagAggregator.cs" />
-    <Compile Include="TestCode\StubTextBuffer.cs" />
-    <Compile Include="TestCode\StubTextDocument.cs" />
-    <Compile Include="TestCode\StubTextSnapshot.cs" />
-    <Compile Include="TestCode\StubTextSnapshotLine.cs" />
-    <Compile Include="TestCode\StubWpfTextViewLine.cs" />
-    <Compile Include="TestCode\StubWpfTextView.cs" />
+    <Compile Include="TestCode\FakeMappingSpan.cs" />
+    <Compile Include="TestCode\FakeMappingTagSpan.cs" />
+    <Compile Include="TestCode\FakeTagAggregator.cs" />
+    <Compile Include="TestCode\FakeTextBuffer.cs" />
+    <Compile Include="TestCode\FakeTextDocument.cs" />
+    <Compile Include="TestCode\FakeTextSnapshot.cs" />
+    <Compile Include="TestCode\FakeTextSnapshotLine.cs" />
+    <Compile Include="TestCode\FakeWpfTextViewLine.cs" />
+    <Compile Include="TestCode\FakeWpfTextView.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="StatusBarNotificationIcon.xaml">
