--- a/Hosts/VS/TddStudioPackage.Extensions/TddStudioPackage.Extensions.fsproj
+++ b/Hosts/VS/TddStudioPackage.Extensions/TddStudioPackage.Extensions.fsproj
@@ -69,6 +69,8 @@
     <Compile Include="ContextMenuData.fs" />
     <Compile Include="Editor\TestMarkerTag.fs" />
     <Compile Include="Editor\TestMarkerTagger.fs" />
+    <Compile Include="Editor\SequencePointCoverageTag.fs" />
+    <Compile Include="Editor\SequencePointCoverageTagger.fs" />
     <Compile Include="Editor\MarginConstants.fs" />
     <Compile Include="Editor\MarginGlyphFactory.fs" />
     <Compile Include="Editor\MarginGlpyhTagAndBoundGenerator.fs" />
