--- a/Hosts/VS/TddStudioPackage.Extensions.UnitTests/TddStudioPackage.Extensions.UnitTests.fsproj
+++ b/Hosts/VS/TddStudioPackage.Extensions.UnitTests/TddStudioPackage.Extensions.UnitTests.fsproj
@@ -69,8 +69,10 @@
     <Compile Include="TestDoubles.ServiceProvider.fs" />
     <Compile Include="ServicesTest.fs" />
     <Content Include="packages.config" />
-    <Compile Include="Editor\SequencePointCoverageTaggerTests.fs" />
-    <Compile Include="Editor\TestMarkerTaggerTests.fs" />
+    <Compile Include="Editor\TestStartTaggerTests.fs" />
+    <Compile Include="Editor\FailurePointTaggerTests.fs" />
+    <Compile Include="Editor\CodeCoverageTaggerTests.fs" />
+    <Compile Include="Editor\SequencePointTaggerTests.fs" />
     <Compile Include="Editor\MarginGlpyhTagAndBoundGeneratorTests.fs" />
     <Compile Include="Editor\MarginTests.fs" />
   </ItemGroup>
