--- a/Hosts/VS/TddStudioPackage.Extensions/TddStudioPackage.Extensions.fsproj
+++ b/Hosts/VS/TddStudioPackage.Extensions/TddStudioPackage.Extensions.fsproj
@@ -67,10 +67,14 @@
     <Compile Include="VsDebuggerExtensions.fs" />
     <Compile Include="EditorFrameworkExtensions.fs" />
     <Compile Include="ContextMenuData.fs" />
-    <Compile Include="Editor\TestMarkerTag.fs" />
-    <Compile Include="Editor\TestMarkerTagger.fs" />
-    <Compile Include="Editor\SequencePointCoverageTag.fs" />
-    <Compile Include="Editor\SequencePointCoverageTagger.fs" />
+    <Compile Include="Editor\TestStartTag.fs" />
+    <Compile Include="Editor\TestStartTagger.fs" />
+    <Compile Include="Editor\FailurePointTag.fs" />
+    <Compile Include="Editor\FailurePointTagger.fs" />
+    <Compile Include="Editor\CodeCoverageTag.fs" />
+    <Compile Include="Editor\CodeCoverageTagger.fs" />
+    <Compile Include="Editor\SequencePointTag.fs" />
+    <Compile Include="Editor\SequencePointTagger.fs" />
     <Compile Include="Editor\MarginConstants.fs" />
     <Compile Include="Editor\MarginGlyphFactory.fs" />
     <Compile Include="Editor\MarginGlpyhTagAndBoundGenerator.fs" />
