--- a/Hosts/VS/TddStudioPackage/TddStudioPackage.csproj
+++ b/Hosts/VS/TddStudioPackage/TddStudioPackage.csproj
@@ -38,9 +38,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
-    <DeployExtension>True</DeployExtension>
-    <CopyVsixExtensionFiles>True</CopyVsixExtensionFiles>
-    <CreateVsixContainer>True</CreateVsixContainer>
+    <DeployExtension>False</DeployExtension>
+    <CopyVsixExtensionFiles>False</CopyVsixExtensionFiles>
+    <CreateVsixContainer>False</CreateVsixContainer>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -195,14 +195,15 @@
     <Reference Include="System.Xaml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EditorExtensions\CodeCoverageTag.cs" />
-    <Compile Include="EditorExtensions\TestMarkerTaggerProvider.cs" />
-    <Compile Include="EditorExtensions\SequencePointCoverageTaggerProvider.cs" />
-    <Compile Include="EditorExtensions\GlyphFactory.cs" />
-    <Compile Include="EditorExtensions\GlyphFactoryProvider.cs" />
-    <Compile Include="EditorExtensions\CodeCoverageState.cs" />
-    <Compile Include="EditorExtensions\CodeCoverageTagger.cs" />
-    <Compile Include="EditorExtensions\CodeCoverageTaggerProvider.cs" />
+    <Compile Include="EditorExtensions\ZCodeCoverageTag.cs" />
+    <Compile Include="EditorExtensions\FailurePointTaggerProvider.cs" />
+    <Compile Include="EditorExtensions\TestStartTaggerProvider.cs" />
+    <Compile Include="EditorExtensions\SequencePointTaggerProvider.cs" />
+    <Compile Include="EditorExtensions\ZGlyphFactory.cs" />
+    <Compile Include="EditorExtensions\ZGlyphFactoryProvider.cs" />
+    <Compile Include="EditorExtensions\ZCodeCoverageState.cs" />
+    <Compile Include="EditorExtensions\ZCodeCoverageTagger.cs" />
+    <Compile Include="EditorExtensions\ZCodeCoverageTaggerProvider.cs" />
     <Compile Include="EditorExtensions\MarginFactory.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
